# tetcoin

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  appveyor.yml  file_header.txt
.config/: lingua.dic
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: burnin-label-notification.yml  publish-docker-release.yml  publish-draft-release.yml  release-bot.yml  release-candidate.yml
.rpm/: tetcoin.spec
cli/: Cargo.toml  README.md  build.rs
cli/browser-demo/: index.html
cli/src/: browser.rs  cli.rs  command.rs  lib.rs
core-primitives/: Cargo.toml  README.md
core-primitives/src/: lib.rs
doc/: docker.md  shell-completion.md
docker/: Dockerfile  build.sh  docker-compose-local.yml  docker-compose.yml  readme-docker.adoc  sentry-docker-compose.yml
erasure-coding/: Cargo.toml  README.md
erasure-coding/fuzzer/: Cargo.toml
erasure-coding/fuzzer/src/: reconstruct.rs  round_trip.rs
erasure-coding/src/: lib.rs  wrapped_shard.rs
node/collation-generation/: Cargo.toml  README.md
node/collation-generation/src/: error.rs  lib.rs
node/core/approval-voting/: Cargo.toml
node/core/approval-voting/src/: lib.rs
node/core/approval-voting/src/aux_schema/: mod.rs  tests.rs
node/core/av-store/: Cargo.toml
node/core/av-store/src/: lib.rs  tests.rs
node/core/backing/: Cargo.toml
node/core/backing/src/: lib.rs
node/core/bitfield-signing/: Cargo.toml
node/jaeger/: Cargo.toml
node/jaeger/src/: lib.rs
node/metered-channel/: Cargo.toml
node/overseer/: Cargo.toml
node/overseer/examples/: minimal-example.rs
node/overseer/src/: lib.rs
node/primitives/: Cargo.toml
node/primitives/src/: approval.rs  lib.rs
node/service/: Cargo.toml  README.adoc
node/service/res/: kusama.json  metrocoin.json  rococo.json  westend.json
node/service/src/: chain_spec.rs  client.rs  grandpa_support.rs  lib.rs
node/subsystem/: Cargo.toml
node/subsystem-test-helpers/: Cargo.toml
node/subsystem-test-helpers/src/: lib.rs
node/subsystem-util/: Cargo.toml
node/subsystem-util/src/: lib.rs  validator_discovery.rs
node/subsystem/src/: errors.rs  lib.rs  messages.rs
parachain/: Cargo.toml  README.adoc
parachain/src/: lib.rs  primitives.rs  wasm_api.rs
parachain/src/wasm_executor/: mod.rs  validation_host.rs
parachain/test-parachains/: Cargo.toml
parachain/test-parachains/adder/: Cargo.toml  build.rs
parachain/test-parachains/adder/collator/: Cargo.toml  README.md
parachain/test-parachains/adder/collator/src/: cli.rs  lib.rs  main.rs
parachain/test-parachains/adder/collator/tests/: integration.rs
parachain/test-parachains/adder/src/: lib.rs  wasm_validation.rs
parachain/test-parachains/halt/: Cargo.toml
parachain/test-parachains/halt/src/: lib.rs
parachain/test-parachains/src/: lib.rs
parachain/test-parachains/tests/: lib.rs
parachain/test-parachains/tests/adder/: mod.rs
parachain/test-parachains/tests/wasm_executor/: mod.rs
primitives/: Cargo.toml  README.adoc
primitives/src/: lib.rs  v0.rs  v1.rs
roadmap/: parachains.md  render.sh
roadmap/implementers-guide/: README.md  book.toml
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: claims.rs  crowdloan.rs  impls.rs  lib.rs  paras_registrar.rs  paras_sudo_wrapper.rs  purchase.rs  slot_range.rs  slots.rs
runtime/kusama/: Cargo.toml
runtime/metrocoin/: Cargo.toml  build.rs
runtime/metrocoin/src/: constants.rs  lib.rs
runtime/metrocoin/src/weights/: fabric_system.rs  mod.rs  noble_balances.rs  noble_collective.rs  noble_democracy.rs  noble_elections_phragmen.rs  noble_identity.rs  noble_im_online.rs  noble_indices.rs  noble_multisig.rs  noble_proxy.rs  noble_scheduler.rs  noble_session.rs  noble_staking.rs  noble_timestamp.rs  noble_treasury.rs  noble_utility.rs  noble_vesting.rs  runtime_common_claims.rs
runtime/parachains/: Cargo.toml
runtime/parachains/src/: configuration.rs  dmp.rs  hrmp.rs  inclusion.rs  inclusion_inherent.rs  initializer.rs  lib.rs  mock.rs  origin.rs  paras.rs  reward_points.rs  scheduler.rs  session_info.rs  ump.rs  util.rs
runtime/parachains/src/runtime_api_impl/: mod.rs  v1.rs
runtime/polkadot/: Cargo.toml
runtime/rococo/: Cargo.toml  build.rs
runtime/rococo/src/: constants.rs  lib.rs  propose_parachain.rs
runtime/test-runtime/: Cargo.toml  build.rs
runtime/test-runtime/src/: constants.rs  lib.rs
runtime/tetcoin/: Cargo.toml  README.adoc  build.rs
runtime/westend/: Cargo.toml  build.rs
runtime/westend/src/: constants.rs  lib.rs
runtime/westend/src/weights/: fabric_system.rs  frame_system.rs  mod.rs  noble_balances.rs  noble_identity.rs  noble_im_online.rs  noble_indices.rs  noble_multisig.rs  noble_proxy.rs  noble_scheduler.rs  noble_session.rs  noble_staking.rs  noble_timestamp.rs  noble_utility.rs  noble_vesting.rs  pallet_balances.rs  pallet_identity.rs  pallet_im_online.rs  pallet_indices.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_staking.rs  pallet_timestamp.rs  pallet_utility.rs  pallet_vesting.rs
scripts/: adder-collator.sh  two-node-local-net.sh
scripts/docker/: Dockerfile  release.Dockerfile
scripts/github/: generate_release_text.rb  tetcoin_release.erb
scripts/gitlab/: check_extrinsics_ordering.sh  check_labels.sh  check_line_width.sh  check_runtime.sh  lib.sh  test_deterministic_wasm.sh
scripts/kubernetes/: Chart.yaml  README.md  values.yaml
scripts/packaging/: tetcoin.service
src/: README.adoc  main.rs
statement-table/: Cargo.toml  README.adoc
statement-table/src/: generic.rs  lib.rs
tests/: common.rs  invalid_order_arguments.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs
xcm/: Cargo.toml
xcm/src/: lib.rs
xcm/src/v0/: junction.rs  mod.rs  multi_asset.rs  multi_location.rs  order.rs  traits.rs
xcm/xcm-builder/: Cargo.toml
xcm/xcm-builder/src/: currency_adapter.rs  lib.rs  location_conversion.rs  origin_conversion.rs
xcm/xcm-executor/: Cargo.toml
xcm/xcm-executor/src/: assets.rs  config.rs  lib.rs  traits.rs
(+159 files in other folders)
