[[bin]]
name = "tetcoin"
path = "src/main.rs"

[package]
name = "tetcoin"
description = "Implementation of a https://tetcoin.org node in Rust based on the Tetcore framework."
license = "GPL-3.0-only"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
readme = "README.md"

[patch.crates-io]
# tetsy-scale-codec = { path = "~/live/tetcoin/tetsy-scale-codec" }
# tetsy-scale-codec-derive = { path = "~/live/tetcoin/tetsy-scale-codec/derive" }
tetsy-scale-codec = { git = "https://github.com/tetcoin/tetsy-scale-codec", branch="tet-hotfix-1" }
tetsy-scale-codec-derive = { git = "https://github.com/tetcoin/tetsy-scale-codec", branch="tet-hotfix-1" }
# tet-core = { path = "~/live/tetcoin/tetcore/primitives/core" }
# tc-cli = { path = "~/live/tetcoin/tetcore/client/cli" }
# tet-core = { git = "https://github.com/tetcoin/tetcore", branch="master" }
# tc-cli = { git = "https://github.com/tetcoin/tetcore", branch="master" }

[dependencies.funty]
version = "1.1"
default-features = false

[dependencies]
cli = { package = "tetcoin-cli", path = "cli" }
color-eyre = "0.5.10"
thiserror = "1.0.23"
futures = "0.3.12"
service = { version = "0.8.3", package = "tetcoin-service", path = "node/service" }
tetsy-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.22.0"
tempfile = "3.2.0"

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/parachains",
	"runtime/tetcoin",
	"runtime/metrocoin",
	"runtime/rococo",
	"runtime/westend",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-selection",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/proposer",
	"node/core/provisioner",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/pov-distribution",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metered-channel",
	"node/test/client",
	"node/test/service",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Tetcoin runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
real-overseer=["cli/real-overseer"]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "tetcoin"
extended-description = "Implementation of a https://tetcoin.org node in Rust based on the Tetcore framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/tetcoin", "/usr/bin/", "755"],
	["scripts/packaging/tetcoin.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/tetcoin"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "tetcoin"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tetcoin = { path = "/usr/bin/tetcoin" }

[package.metadata.rpm.files]
"../scripts/packaging/tetcoin.service" = { path = "/usr/lib/systemd/system/tetcoin.service", mode = "644" }
