[package]
name = "tetcoin-cli"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetcoin Relay-chain Client Node"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.13"
thiserror = "1.0.23"
structopt = { version = "0.3.21", optional = true }
wasm-bindgen = { version = "0.2.69", optional = true }
wasm-bindgen-futures = { version = "0.4.19", optional = true }
futures = "0.3.12"

service = { package = "tetcoin-service", path = "../node/service", default-features = false, optional = true }
tetcoin-parachain = { path = "../parachain", optional = true }

tet-core = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tracing-futures = "0.2.4"
fabric-benchmarking-cli = { git = "https://github.com/tetcoin/tetcore", branch = "master", optional = true }
tc-cli = { git = "https://github.com/tetcoin/tetcore", branch = "master", optional = true }
tc-service = { git = "https://github.com/tetcoin/tetcore", branch = "master", optional = true }
# browser-utils = { package = "tetcore-browser-utils", git = "https://github.com/tetcoin/tetcore", branch = "master", optional = true }
browser-utils = { package = "tetcore-browser-utils", version = "0.8.1" , optional = true }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/tetcoin/tetcore/pull/6745
tp-trie = { version = "2.0.2", default-features = false }

[build-dependencies]
build-script-utils = { version = "2.0.1" }

[features]
default = [ "wasmtime", "db", "cli", "full-node", "trie-memory-tracker", "tetcoin-parachain" ]
wasmtime = [ "tc-cli/wasmtime", "tetcoin-parachain/wasmtime" ]
db = [ "service/db" ]
cli = [
	"structopt",
	"tc-cli",
	"tc-service",
	"fabric-benchmarking-cli",
]
browser = [
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"browser-utils",
	"service",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
trie-memory-tracker = [ "tp-trie/memory-tracker" ]
full-node = [ "service/full-node" ]
real-overseer = [ "service/real-overseer" ]
