[package]
name = "tetcoin-cli"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetcoin Relay-chain Client Node"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.13"
thiserror = "1.0.23"
structopt = { version = "0.3.21", optional = true }
wasm-bindgen = { version = "0.2.69", optional = true }
wasm-bindgen-futures = { version = "0.4.19", optional = true }
futures = "0.3.12"

service = { version = "0.8.3", package = "tetcoin-service", path = "../node/service", default-features = false, optional = true }
tetcoin-parachain = { version = "0.8.28", path = "../parachain", optional = true }

tet-core = "2.0.2"
tracing-futures = "0.2.4"
fabric-benchmarking-cli = { version = "2.0.1", optional = true }
tc-cli = { version = "0.8.0", optional = true }
tc-service = { version = "0.8.0", optional = true }
browser-utils = { version = "0.8.1", package = "tetcore-browser-utils", optional = true }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/tetcoin/tetcore/pull/6745
tp-trie = { version = "2.0.2", default-features = false }

[build-dependencies]
build-script-utils = "2.0.1"

[features]
default = [ "wasmtime", "db", "cli", "full-node", "trie-memory-tracker", "tetcoin-parachain" ]
wasmtime = [ "tc-cli/wasmtime", "tetcoin-parachain/wasmtime" ]
db = [ "service/db" ]
cli = [
	"structopt",
	"tc-cli",
	"tc-service",
	"fabric-benchmarking-cli",
]
browser = [
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"browser-utils",
	"service",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
trie-memory-tracker = [ "tp-trie/memory-tracker" ]
full-node = [ "service/full-node" ]
real-overseer = [ "service/real-overseer" ]
