[package]
name = "tetcoin-core-primitives"
version = "0.7.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
tet-core = { version = "2.0.2", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tp-runtime = { version = "2.0.2", default-features = false }
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = [ "derive" ] }
tetsy-util-mem = { version = "0.9.0", default-features = false, optional = true }

[features]
default = [ "std" ]
std = [
	"tet-core/std",
	"tp-runtime/std",
	"tetcore-std/std",
	"tetsy-scale-codec/std",
	"tetsy-util-mem",
]
