[package]
name = "tetcoin-primitives"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", optional = true, features = ["derive"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "tet-core", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
inherents = { package = "tp-inherents", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
application-crypto = { package = "tp-application-crypto", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master", optional = true }
tp-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-version = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tetcore-std = { package = "tetcore-std", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-io = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-arithmetic = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-authority-discovery = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
runtime_primitives = { package = "tp-runtime", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tetcoin-parachain = { path = "../parachain", default-features = false }
tetcoin-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "tp-trie", version = "2.0.2", default-features = false }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
fabric-system = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
hex-literal = "0.3.1"
parity-util-mem = { version = "0.9.0", default-features = false, optional = true }

[dev-dependencies]
tp-serializer = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"tp-api/std",
	"tp-authority-discovery/std",
	"tp-keystore",
	"tetcore-std/std",
	"tp-io/std",
	"tp-version/std",
	"tp-staking/std",
	"tp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"parity-util-mem",
	"tetcoin-parachain/std",
	"tetcoin-core-primitives/std",
	"bitvec/std",
	"fabric-system/std",
]
