[package]
name = "tetcoin-primitives"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", optional = true, features = ["derive"] }
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "tet-core", version = "2.0.2", default-features = false }
inherents = { package = "tp-inherents", version = "2.0.2", default-features = false }
application-crypto = { package = "tet-application-crypto", version = "2.0.2", default-features = false }
tp-keystore = { version = "0.8.1", optional = true }
tp-api = { version = "2.0.2", default-features = false }
tp-version = { version = "2.0.2", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tet-io = { version = "2.0.2", default-features = false }
tp-staking = { version = "2.0.2", default-features = false }
arithmetic = { version = "2.0.2", default-features = false }
tp-authority-discovery = { version = "2.0.2", default-features = false }
runtime_primitives = { package = "tp-runtime", version = "2.0.2", default-features = false }
tetcoin-parachain = { version = "0.8.28", path = "../parachain", default-features = false }
tetcoin-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "tp-trie", version = "2.0.2", default-features = false }
bitvec = { version = "0.22.3", default-features = false, features = ["alloc"] }
fabric-system = { version = "2.0.0", default-features = false }
hex-literal = "0.3.1"
tetsy-util-mem = { version = "0.9.0", default-features = false, optional = true }

[dev-dependencies]
serializer = { version = "2.0.2" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"tetsy-scale-codec/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"tp-api/std",
	"tp-authority-discovery/std",
	"tp-keystore",
	"tetcore-std/std",
	"tet-io/std",
	"tp-version/std",
	"tp-staking/std",
	"arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"tetsy-util-mem",
	"tetcoin-parachain/std",
	"tetcoin-core-primitives/std",
	"bitvec/std",
	"fabric-system/std",
]
