[package]
name = "tetcoin-rpc"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
tetcoin-primitives = { path = "../primitives" }
tc-client-api = { git = "https://github.com/tetcoin/tetcore", branch = "master"  }
tp-blockchain = { git = "https://github.com/tetcoin/tetcore", branch = "master"  }
tp-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master"  }
tp-runtime = { git = "https://github.com/tetcoin/tetcore", branch = "master"  }
tp-api = { git = "https://github.com/tetcoin/tetcore", branch = "master"  }
tp-consensus = { git = "https://github.com/tetcoin/tetcore", branch = "master"  }
tp-consensus-babe = { git = "https://github.com/tetcoin/tetcore", branch = "master"  }
tc-chain-spec = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-rpc = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-consensus-babe = { git = "https://github.com/tetcoin/tetcore", branch = "master"}
tc-consensus-babe-rpc = { git = "https://github.com/tetcoin/tetcore", branch = "master"}
tc-consensus-epochs = { git = "https://github.com/tetcoin/tetcore", branch = "master"}
tc-finality-grandpa = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-finality-grandpa-rpc = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master"}
tc-sync-state-rpc = { git = "https://github.com/tetcoin/tetcore", branch = "master"}
txpool-api = { package = "tp-transaction-pool", git = "https://github.com/tetcoin/tetcore", branch = "master" }
fabric-rpc-system = { package = "tetcore-fabric-rpc-system", git = "https://github.com/tetcoin/tetcore", branch = "master"  }
noble-transaction-payment-rpc = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
parity-scale-codec = { version = "2.0.0", default-features = false }
tp-block-builder = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
