[package]
name = "tetcoin-rpc"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
tetcoin-primitives = { version = "0.8.28", path = "../primitives" }
tc-client-api = { version = "2.0.0" }
tp-blockchain = { version = "2.0.2" }
tp-keystore = { version = "0.8.1" }
tp-runtime = "2.0.2"
tp-api = { version = "2.0.2" }
tp-consensus = { version = "0.8.2" }
tp-consensus-babe = { version = "0.8.2" }
tc-chain-spec = { version = "2.0.0" }
tc-rpc = { version = "2.0.0" }
tc-consensus-babe = { version = "0.8.0" }
tc-consensus-babe-rpc = { version = "0.8.0" }
tc-consensus-epochs = { version = "0.8.0" }
tc-finality-grandpa = { version = "0.8.0" }
tc-finality-grandpa-rpc = { version = "0.8.0" }
tc-keystore = { version = "2.0.0" }
tc-sync-state-rpc = { version = "0.8.0" }
txpool-api = { package = "tp-transaction-pool", version = "2.0.2" }
fabric-rpc-system = { package = "tetcore-fabric-rpc-system", version = "2.0.1" }
noble-transaction-payment-rpc = { version = "2.0.0" }
tetsy-scale-codec = { version = "2.0.0", default-features = false }
tp-block-builder = { version = "2.0.2" }
