[package]
name = "tetcoin-statement-table"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
tet-core = "2.0.2"
primitives = { version = "0.8.28", package = "tetcoin-primitives", path = "../primitives" }
