[package]
name = "xcm"
version = "0.8.22"
authors = ["Parity Technologies x<admin@parity.io>"]
description = "The basic XCM datastructures."
edition = "2018"

[dependencies]
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = [ "derive" ] }

[features]
default = ["std"]
wasm-api = []
std = [
	"tetsy-scale-codec/std",
]
