[package]
name = "erasure_coding_fuzzer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false

[dependencies]
tetcoin-erasure-coding = { version = "0.8.28", path = ".." }
honggfuzz = "0.5"
primitives = { version = "0.8.28", package = "tetcoin-primitives", path = "../../primitives/" }

[[bin]]
name = "reconstruct_fuzzer"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]
