[package]
name = "tetcoin-node-collation-generation"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tetcoin-erasure-coding = { version = "0.8.28", path = "../../erasure-coding" }
tetcoin-node-primitives = { path = "../primitives" }
tetcoin-node-subsystem = { path = "../subsystem" }
tetcoin-node-subsystem-util = { path = "../subsystem-util" }
tetcoin-primitives = { version = "0.8.28", path = "../../primitives" }
tet-core = "2.0.2"
thiserror = "1.0.23"

[dev-dependencies]
tetcoin-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
