[package]
name = "tetcoin-node-jaeger"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Tetcoin Jaeger primitives"

[dependencies]
async-std = "1.8.0"
mick-jaeger = "0.1.4"
lazy_static = "1.4"
parking_lot = "0.11.1"
tetcoin-primitives = { path = "../../primitives" }
tc-network = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tet-core = "2.0.2"
thiserror = "1.0.23"
log = "0.4.13"
