[package]
name = "tetcoin-overseer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
client = { package = "tc-client-api", version = "2.0.0" }
futures = "0.3.12"
futures-timer = "3.0.2"
oorandom = "11.1.3"
tetcoin-node-primitives = { version = "0.1.0", package = "tetcoin-node-primitives", path = "../primitives" }
tetcoin-node-subsystem-util = { path = "../subsystem-util" }
tetcoin-primitives = { version = "0.8.28", path = "../../primitives" }
tetcoin-subsystem = { package = "tetcoin-node-subsystem", path = "../subsystem" }
tracing = "0.1.22"
tracing-futures = "0.2.4"

[dev-dependencies]
tet-core = "2.0.2"
tetcoin-node-network-protocol = { path = "../network/protocol" }
futures = { version = "0.3.12", features = ["thread-pool"] }
futures-timer = "3.0.2"
femme = "2.1.1"
kv-log-macro = "1.0.7"
