[package]
name = "tetcoin-node-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
futures = "0.3.12"
tetcoin-primitives = { path = "../../primitives" }
tetcoin-statement-table = { path = "../../statement-table" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
runtime_primitives = { package = "tp-runtime", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tet-core = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-consensus-vrf = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-consensus-slots = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
