[package]
name = "tetcoin-node-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
futures = "0.3.12"
tetcoin-primitives = { version = "0.8.28", path = "../../primitives" }
tetcoin-statement-table = { path = "../../statement-table" }
tetsy-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
runtime_primitives = { package = "tp-runtime", version = "2.0.2", default-features = false }
tet-core = "2.0.2"
tp-consensus-vrf = { version = "0.8.2" }
tp-consensus-slots = { version = "0.8.2", default-features = false }
